<resources>
    <string name="app_name">ChatApp</string>
    <string name="supervised_text">Supervised by Muhammad Nabil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or_create_a_new_account">or Create a new account</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="create_new_room">Create New Room</string>
    <string name="room_name">Room Name</string>
    <string name="room_description">Room Description</string>
    <string name="create">Create</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="message">Message</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="join">Join</string>
    <string name="create_account">Create Account</string>
    <string name="type_a_room_name_to_search_for">Type a room name to search for</string>
    <string name="search">Search</string>
    <string name="no_rooms_to_show">No Rooms to show</string>
    <string name="no_messages_to_show">No Messages to show</string>
    <string name="leave_room">Leave Room</string>
    <plurals name="members_count">
        <item formatted="true" quantity="one">%s Member</item>
        <item formatted="true" quantity="other">%s Members</item>
    </plurals>
</resources>